﻿===== Hasor-Core v1.2.1
* 新增:
    01.新增 @Inject 注解方式自动注入。
    02.将jetty的JSON解析器代码添加到Hasor工具代码中，位于包“org.more.json”。
* 改进:
    01.使用JDK1.7重新编译。
    02.Fix，classcode模块对long、float、double基本类型错误处理的问题。
    03.AbstractEnvironment类的initEnvironment方法增加Settings类型参数。createSettings方法不再属于AbstractEnvironment的抽象方法。
    04.StandardEnvironment类增加Settings类型参数的构造方法。
    05.MimeType接口增加getContent()方法。
    06.原有模块在实现 StartModule 接口时，如果是通过启动参数或者配置方式的模块，器onStart调用时间点在“ContextEvent_Started”事件之后。
        - 现改为引发“ContextEvent_Started”事件时。
    07.MVC的插件分离成独立插件。
    08.事务管理器入口类名“Manager”更名为“TranManager”。可以更好的让人理解。
    09.事务管理增加“TransactionTemplate”接口。

===== Hasor-Core v1.2.0
* 新增:
    01.增加 @IgnoreParam注解，用于Form表单注入忽略。
    02.net.hasor.db.transaction.Manager新增回调方式执行事务的方法。
    03.事务拦截器部分分离出独立的事务插件，不再属于db的一部分。
* 修复:
    02.修复BeanUtils在获取所有字段、所有方法时无法获取到父类中数据的问题。
* 改进:
    03.Validation验证类传入的参数改为泛型，ValidationCallInterceptor增加了对泛型判断的逻辑。
    04.Valid验证框架分离出MVC成为一个独立的验证框架。
    05.改进ResultDO相关Message方面的功能，使其用起来更爽。

===== Hasor-Core v1.1.0
* 新增:
    01.增加ContextMap类，该类可以为WebMVC提供request作用域范围的数据存储。可以通过AbstractWebController或者AppContext获取到它。
    02.mvc框架增加请求文件名尾缀匹配，默认配置：“htm;html;do;”，配置项为：“hasor.modConfig.mvc.interceptFiles”。
    03.Hasor增加autoAware方法用以冲抵ApiBinder中删除的autoAware方法。
* 修复:
    01.修复TemplateAppContext中在加载模块的时候，没有拦截住因为引入依赖而导致的报错。
    02.修复mvc验证框架ValidData类中validMessage字段未初始化引发的空指针异常。
    03.修复资源加载器插件，MultiResourceLoader类在向map插入值时插入空指针的问题。
* 改进:
    01.ResourceLoader接口的exist方法不在抛出IO异常。
    02.AbstractWebController增加getModelByName方法。
    03.AppContextAware接口的使用不再依赖ApiBinder接口的声明，此项改进去掉了ApiBinder接口中的autoAware方法。
    04.TemplateAppContext 在 start过程中不再需要处理AppContextAware相关初始化工作。
    05.BindInfoProvider去掉构造方法ApiBinder类型参数，相关AppContextAware工作不再需要特殊声明。

===== Hasor-Core v1.0.0
* 新增:
    01.新增DateUtils，时间日期方面的工具类。
    02.增添了一组getProvider方法方法，可以通过String或Class来获取Bean的Provider。
    03.AopMatchers类的expressionClass和expressionMethod方法开放使用。
    04.合并Hasor-MVC框架
    --MVC--
    05.迁移 controller、result 插件。