@@ -1,48 +1,0 @@
-/*
- * Copyright 2008-2009 the original 赵永春(zyc@hasor.net).
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *      http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
-package net.hasor.plugins.result;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
-import net.hasor.mvc.ResultProcess;
-import net.hasor.mvc.WebCall;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-/**
- * 
- * @version : 2013-6-5
- * @author 赵永春 (zyc@hasor.net)
- */
-public class IncludeResultProcess implements ResultProcess {
-    protected Logger logger = LoggerFactory.getLogger(getClass());
-    public Object onThrowable(Throwable throwable, WebCall call) throws Throwable {
-        throw throwable;
-    }
-    public Object onResult(Object result, WebCall call) throws Throwable {
-        if (result == null) {
-            return result;
-        }
-        HttpServletRequest request = call.getHttpRequest();
-        HttpServletResponse response = call.getHttpResponse();
-        //
-        if (request != null && response != null && response.isCommitted() == false) {
-            if (logger.isDebugEnabled()) {
-                logger.debug("include %s.", result);
-            }
-            request.getRequestDispatcher(result.toString()).include(request, response);
-        }
-        return result;
-    }
-}
