@@ -1,31 +1,0 @@
-/*
- * Copyright 2008-2009 the original 赵永春(zyc@hasor.net).
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *      http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
-package net.hasor.plugins.result;
-import net.hasor.mvc.support.ControllerModule;
-import net.hasor.mvc.support.LoadHellper;
-/**
- * 注册插件。
- * @version : 2013-4-8
- * @author 赵永春 (zyc@hasor.net)
- */
-public class ResultModule extends ControllerModule {
-    protected void loadController(LoadHellper helper) throws Throwable {
-        helper.loadResultProcess(Json.class, JsonResultProcess.class);
-        helper.loadResultProcess(Forword.class, ForwordResultProcess.class);
-        helper.loadResultProcess(Include.class, IncludeResultProcess.class);
-        helper.loadResultProcess(Redirect.class, RedirectResultProcess.class);
-    }
-}
