@@ -2,6 +2,7 @@
 * 新增:
     01.新增 @Inject 注解方式自动注入。
     02.将jetty的JSON解析器代码添加到Hasor工具代码中，位于包“org.more.json”。
+    03.新增WebApiBinderWrap类。
 * 改进:
     01.使用JDK1.7重新编译。
     02.Fix，classcode模块对long、float、double基本类型错误处理的问题。
@@ -13,6 +14,7 @@
     07.MVC的插件分离成独立插件。
     08.事务管理器入口类名“Manager”更名为“TranManager”。可以更好的让人理解。
     09.事务管理增加“TransactionTemplate”接口。
+    10.删除ResultModule类和其相关的功能，该功能不再是核心功能的一部分。
 
 ===== Hasor-Core v1.2.0
 * 新增:
